homepage refimed,Sermorn-details implemented

--- a/src/app/home/love-compassion/love-compassion.component.html
+++ b/src/app/home/love-compassion/love-compassion.component.html
@@ -11,15 +11,21 @@
   </div>
 
   <div class="images">
-    <img src="/assets/images/love-compassion-3.png" alt="love-compassion/png" />
-    <div class="button-img">
-      <button class="primary-btn read-morelargedevicce">Read more</button>
-      <img
+    <img class="h-[280px] w-[220px] rounded-[32px]" src="/assets/images/daddy.png" alt="daddy/png" />
+    <div class="button-img ">
+      <button class="primary-btn read-morelargedevicce md:mb-[40px]">Read more</button>
+      <!-- <img
         src="/assets/images/love-compassion-2.png"
         alt="love-compassion/png"
+      /> -->
+      
+      <img
+        class="speciall h-[320px] w-[220px] rounded-[32px]"
+        src="/assets/images/perfectlogo.png"
+        alt="Church/png"
       />
     </div>
-    <img src="/assets/images/love-compassion-1.png" alt="love-compassion/png" />
+    <img class="h-[280px] w-[220px] rounded-[32px]" src="/assets/images/daddy.png" alt="mummy/png" />
   </div>
   <div class="buttondiv-smalldivce">
   <button class="primary-btn read-more">Read more</button>
