--- a/src/app/home/upcoming-events-previews/upcomingEventsPreview.component.html
+++ b/src/app/home/upcoming-events-previews/upcomingEventsPreview.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="flex flex-col-reverse justify-center show-event lg:flex-row">
     <div class="flex justify-end gap-4 py-10 lg:hidden">
-      <label>View all Sermaons</label>
+      <label>View all Events</label>
       <img
         class="h-[12px] mt-1"
         src="/assets/images/arrow-right.png"
@@ -46,9 +46,11 @@
       </div>
     </div>
     <div class="flex flex-col">
-      <div class="show-event-img lg:w-[710px]"></div>
+      <div class="show-event-img lg:w-[710px] md:h-[520px] h-[250px]">
+        <img class="w-full h-full" src="/assets/images/mummy&daddy.png " alt="clock/svg" />
+      </div>
       <div class="justify-end hidden gap-4 py-10 lg:flex">
-        <label>View all Sermaons</label>
+        <label>View all Events</label>
         <img
           class="h-[12px] mt-1"
           src="/assets/images/arrow-right.png"
