--- a/src/app/sermon/sermon-details/sermon-details.html
+++ b/src/app/sermon/sermon-details/sermon-details.html
@@ -1,3 +1,104 @@
-<div>
-                
+<label class="text-black font-normal text-[20px] ml-[10%] md:ml-32 lg:ml-60"
+  >COMMENTS</label
+>
+<div
+  class="flex flex-col cont items-center md:items-start w-[90%] mx-[5%] md:w-full md:ml-32 lg:ml-60 mb-20"
+>
+  <div class="flex mt-12 flex-col w-full">
+    <label class="text-black font-normal text-[15px] ml-[5%] md:ml-0"
+      >COMMENT:</label
+    >
+    <form class="">
+      <textarea
+        class="bg-[#D9D9D9] md:w-[400px] lg:w-[600px] w-[90%] mx-[5%] md:mx-auto h-[200px] border-0 outline-none"
+      >
+      </textarea>
+      <div
+        class="flex justify-end mr-[5%] md:mr-0 md:ml-[300px] lg:ml-[500px] md:justify-start"
+      >
+        <button
+          class="bg-[#27AE60] text-center font-normal text-[16px] uppercase text-[#1C1D28] outline-none rounded-[12px] py-2 mt-4 px-10 cursor-pointer"
+          type="submit"
+        >
+          Submit
+        </button>
+      </div>
+    </form>
+    <div class="flex flex-col mt-5">
+      <div class="text-black flex flex-row gap-4">
+        <small>Olalekan Usman</small>
+        <small>2:30pm</small>
+        <small>12/07/2022</small>
+      </div>
+      <div class="mt-5">
+        <p
+          class="text-[18px] font-normal leading-[24px] text-[#161722] lg:w-[800px] md:w-[500px] md:mx-0 w-[95%] mx-[2.5%] opacity-[0.78]"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation. Ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Non tellus orci ac auctor augue mauris augue neque gravida.
+        </p>
+      </div>
+    </div>
+    <label class="text-black font-normal text-[15px] ml-[10%] md:ml-40 mt-14"
+      >COMMENT:</label
+    >
+    <form class="">
+      <textarea
+        class="bg-[#D9D9D9] md:w-[400px] lg:w-[600px] w-[90%] md:ml-40 ml-[10%] h-[90px] border-0 outline-none"
+      >
+      </textarea>
+      <div
+        class="flex justify-end mr-[5%] md:mr-0 md:ml-[420px] lg:ml-[620px] md:justify-start"
+      >
+        <button
+          class="bg-[#27AE60] text-center font-normal text-[16px] uppercase text-[#1C1D28] outline-none rounded-[12px] py-2 px-10 mt-4 cursor-pointer"
+          type="submit"
+        >
+          reply
+        </button>
+      </div>
+    </form>
+    <div class="flex flex-col mt-5 md:ml-40 ml-[10%]">
+      <div class="text-black flex flex-row gap-4">
+        <small>Mr Miracle samson</small>
+        <small>4:30pm</small>
+        <small>13/07/2022</small>
+      </div>
+      <div class="mt-5">
+        <p
+          class="text-[18px] font-normal leading-[24px] text-[#161722] lg:w-[800px] md:w-[490px] md:mx-0 w-[95%] mx-[2.5%] opacity-[0.78]"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation. Ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Non tellus orci ac auctor augue mauris augue neque gravida.
+        </p>
+      </div>
+    </div>
+    <div class="md:mr-52 lg:mr-72 mr-[10%] flex flex-col mt-6">
+      <div class="text-black flex flex-row gap-4 justify-end">
+        <small>Olalekan Usman</small>
+        <small>8:30pm</small>
+        <small>19/07/2022</small>
+      </div>
+      <div class="mt-5 flex justify-end flex-row md:ml-40 ml-[10%]">
+        <p
+          class="text-[18px] font-normal leading-[24px] text-[#161722] opacity-[0.78]"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation. Ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Non tellus orci ac auctor augue mauris augue neque gravida.
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
