--- a/src/app/shared/components/church-relevant/church-relevant.component.html
+++ b/src/app/shared/components/church-relevant/church-relevant.component.html
@@ -1,9 +1,8 @@
 <!-- SUB-HEADLINE -->
-  <h6 class="py-4 text-lg font-normal text-center">
-    SUB-HEADLINE</h6>
+  
    <!--Heading-->
    <h2 class="pb-10">
-    CHURCH THAT'S RELEVANT
+    Our Philosophy, Believe and the ministery
    </h2>
 
 <div class="flex flex-wrap justify-center boxx pb-14">
