--- a/src/app/home/love-compassion/love-compassion.component.scss
+++ b/src/app/home/love-compassion/love-compassion.component.scss
@@ -1,4 +1,5 @@
 #love-compassion {
+  
   margin-bottom: 8rem;
   .love-compassion-text1 {
     display: flex;
@@ -35,6 +36,7 @@
     gap: 1.5rem;
 
     .button-img {
+     
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -84,6 +86,10 @@
       justify-content: center;
       margin:3rem 0 5rem 0;
       height: 11px;
+    }
+    .speciall{
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 32px;
     }
   }
 
