--- a/src/app/sermon/sermon/sermon.component.html
+++ b/src/app/sermon/sermon/sermon.component.html
@@ -31,21 +31,18 @@
           <div class="my-3 max-h-[150px] overflow-clip">
             <p id="text1">{{ d.text1 }}</p>
           </div>
-          <div class="justify-end hidden gap-4 py-10 lg:flex">
-            <label>View Blog Details</label>
-            <img
-              class="h-[12px] mt-1"
-              src="/assets/images/arrow-right.png"
-              alt="arrow/png"
-            />
-          </div>
         </div>
         <button
-          class="primary-btn font-normal text-[15px] px-3 py-2"
+          class="bg-[#27ae60] text-white font-normal text-[15px] px-3 py-2 flex gap-1 cursor-pointer"
           type="button"
           [routerLink]="'1'"
         >
-          Read more
+        <span>View Blog Details</span>
+        <img
+          class="h-[12px] mt-1"
+          src="/assets/images/arrow-right.png"
+          alt="arrow/png"
+        />
         </button>
       </div>
     </div>
@@ -60,6 +57,14 @@
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-6 gap-y-10">
     <div class="column" *ngFor="let event of events">
       <sermon-thumbnail [event]="event"></sermon-thumbnail>
+      <div class="flex justify-end">
+        <button
+          class="text-white font-normal text-[15px] px-2 py-2 bg-[#27ae60]"
+          type="button"
+        >
+          View sermon
+        </button>
+      </div>
     </div>
   </div>
 </div>
