--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,7 +1,14 @@
-<body class="bg-plpmDark">
+<body class="bg-white">
   <nav class="top-0 left-0 w-full shadow">
-    <div class="container m-auto flex justify-between text-plpmWhite">
-      <h1 class="pl-6 md:pl-0 py-4 text-larger font-bold">PLPM</h1>
+    <div class="container m-auto flex justify-between text-plpmWhite md:text-black">
+      <div class="flex flex-row items-center ml-3 md:ml-0">
+        <img
+        class=" h-[45px] cursor-pointer"
+        src="/assets/images/perfectlogo.png"
+        alt="Church/png"
+      />
+      <h1 class=" py-4 text-larger font-bold text-black">PLPM</h1>
+      </div>
       <ul
         class="hidden md:text-large lg:text-larger font-medium md:flex py-2 lg:py-0 cursor-pointer"
       >
@@ -62,13 +69,13 @@
         (click)="togglenavbarmobile()"
         *ngIf="!hidenavbar"
       >
-        <div class="w-5 h-1 bg-plpmWhite mb-1"></div>
-        <div class="w-5 h-1 bg-plpmWhite mb-1"></div>
-        <div class="w-5 h-1 bg-plpmWhite"></div>
+        <div class="w-5 h-1 bg-black mb-1"></div>
+        <div class="w-5 h-1 bg-black mb-1"></div>
+        <div class="w-5 h-1 bg-black"></div>
       </button>
       <div
         *ngIf="hidenavbar"
-        class="absolute z-[99] top-0 right-0 w-7/12 h-screen bg-plpmDark flex flex-col items-center transition-all duration-300"
+        class="absolute z-[99] top-0 right-0 w-7/12 h-screen bg-plpmDark flex flex-col items-center transition-all duration-300 "
       >
         <div class="absolute left-6">
           <button
