--- a/src/app/home/home-hero/home-hero.component.html
+++ b/src/app/home/home-hero/home-hero.component.html
@@ -1,24 +1,64 @@
-<section id="home-hero">
-  <div class="hero-container">
-    <div class="hero-texts md:pl-[6.875rem]">
-      <p class="welcome">Welcome to our CHURCH</p>
-      <h1 class="comm-texts">Become a part of our community</h1>
-      <div class="button-div">
-      <button class="primary-btn learn-more">Learn more</button>
-      </div>
-      <div class="last-text">
-        <div class="line">
-          <img src="/assets/images/Line.png " alt="line/png" />
+<swiper
+  [pagination]="{
+    dynamicBullets: true
+  }"
+  [navigation]="true"
+  class="mySwiper w-[70%] mx-[15%] md:w-full md:mx-0"
+>
+  <ng-template swiperSlide class="h-[600px] bg-red-700 relative">
+    <video controls class="absolute h-full w-full">
+      <source src="./assets/videos/TypeScript.mp4" type="video/mp4" />
+      This browser doesn't support video tag.
+    </video>
+    <div
+      class="flex flex-col items-center h-[600px] justify-center z-[1] text-white"
+    >
+      <h1 class="font-medium leading-[16px] text-[20px]">
+        Giviing: Giving to God servant
+      </h1>
+      <p class="max-w-[48rem] font-bold leading-[32px] text-[36px] my-12">
+        A word from God will librate your world come and get your word from God
+      </p>
+
+      <div class="flex justify-between items-center">
+        <button></button>
+        <div
+          class="flex justify-center items-center bg-[#56ccf280] w-[50px] h-[50px] rounded-[50%] border-[1px] border-solid border-[#5CC0E2] zoom-out-div-1"
+        >
+          <div
+            class="flex justify-center items-center bg-[#56ccf280] w-[40px] h-[40px] rounded-[50%] pl-2 border-[1px] border-solid border-[#5CC0E2] zoom-out-div"
+          >
+            <i class="fa fa-play text-2xl text-[#D9D9D9]"></i>
+          </div>
         </div>
+      </div></div
+  ></ng-template>
+  <ng-template swiperSlide class="h-[600px] bg-red-700 relative">
+    <video controls class="absolute h-full w-full">
+      <source src="./assets/videos/TypeScript.mp4" type="video/mp4" />
+      This browser doesn't support video tag.
+    </video>
+    <div
+      class="flex flex-col items-center h-[600px] justify-center z-[1] text-white"
+    >
+      <h1 class="font-medium leading-[16px] text-[20px]">
+        Giviing: Giving to God servant
+      </h1>
+      <p class="max-w-[48rem] font-bold leading-[32px] text-[36px] my-12">
+        A word from God will librate your world come and get your word from God
+      </p>
 
-        <p class="last-text-1">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.
-        </p>
-      </div>
-    </div>
-
-    <div class="hero-img">
-      <img img-fluid src="/assets/images/cross.png" alt="cross/png" />
-    </div>
-  </div>
-</section>
+      <div class="flex justify-between items-center">
+        <button></button>
+        <div
+          class="flex justify-center items-center bg-[#56ccf280] w-[50px] h-[50px] rounded-[50%] border-[1px] border-solid border-[#5CC0E2] zoom-out-div-1"
+        >
+          <div
+            class="flex justify-center items-center bg-[#56ccf280] w-[40px] h-[40px] rounded-[50%] pl-2 border-[1px] border-solid border-[#5CC0E2] zoom-out-div"
+          >
+            <i class="fa fa-play text-2xl text-[#D9D9D9]"></i>
+          </div>
+        </div>
+      </div></div
+  ></ng-template>
+</swiper>
