--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,94 +4,94 @@
 //     background-color: #E5E5E5;
 //   }
 
-   body {
-    margin: 1.8rem;
-   }
+  //  body {
+  //   margin: 1.8rem;
+  //  }
 
-  .box {
-    background-color: #E5E5E5;
-    display: flex;
-    justify-content: space-between;
-    // padding: 50px;
-    margin: auto;
-	width: 81%;
-  }
+  // .box {
+  //   background-color: #E5E5E5;
+  //   display: flex;
+  //   justify-content: space-between;
+  //   // padding: 50px;
+  //   margin: auto;
+	// width: 81%;
+  // }
 
-   .box .column {
-    display: flex;
-    flex-direction: column;
-    // flex: 10%;
-    height: 9rem;
-    padding: 0.625rem;
-    width: 20rem;
-    height: 18rem;
-    // width: 40%;
-    align-items: center;
-    justify-content: center;
+  //  .box .column {
+  //   display: flex;
+  //   flex-direction: column;
+  //   // flex: 10%;
+  //   height: 9rem;
+  //   padding: 0.625rem;
+  //   width: 20rem;
+  //   height: 18rem;
+  //   // width: 40%;
+  //   align-items: center;
+  //   justify-content: center;
     
-  }
+  // }
 
-  img {
-    width: 3rem;
-  }
-
-
-  p {
-    font-size: 15px;
-  }
+  // img {
+  //   width: 3rem;
+  // }
 
 
-  .box .column h2{
-    font-size: 25px;
-    font-weight: 500;
-    margin-top: 20px;
-    margin-bottom: 10px;
-  }
+  // p {
+  //   font-size: 15px;
+  // }
 
 
-   .box .column:nth-child(1) {
-    background: linear-gradient(to bottom, #56CCF2 90%, #27AE60 10%)
-   }
-
-   .box .column:nth-child(2) {
-   background: linear-gradient(to bottom, rgba(67, 181, 244, 0.8) 90%, #27AE60 10%)
-  }
-
-  .box .column:nth-child(3) {
-   background: linear-gradient(to bottom, #56CCF2 90%, #27AE60 10%)
-  }
+  // .box .column h2{
+  //   font-size: 25px;
+  //   font-weight: 500;
+  //   margin-top: 20px;
+  //   margin-bottom: 10px;
+  // }
 
 
-  @media screen and (max-width: 992px) {
+  //  .box .column:nth-child(1) {
+  //   background: linear-gradient(to bottom, #56CCF2 90%, #27AE60 10%)
+  //  }
 
-    .box {
+  //  .box .column:nth-child(2) {
+  //  background: linear-gradient(to bottom, rgba(67, 181, 244, 0.8) 90%, #27AE60 10%)
+  // }
+
+  // .box .column:nth-child(3) {
+  //  background: linear-gradient(to bottom, #56CCF2 90%, #27AE60 10%)
+  // }
+
+
+  // @media screen and (max-width: 992px) {
+
+  //   .box {
         
-        display: flex;
-        margin: 0 auto;
+  //       display: flex;
+  //       margin: 0 auto;
         
-        // padding: 50px;
-        margin: 0px;
-        width: 81%;
-        gap: 10px;
-        margin-left: 50px;
+  //       // padding: 50px;
+  //       margin: 0px;
+  //       width: 81%;
+  //       gap: 10px;
+  //       margin-left: 50px;
       
-    }
+  //   }
 
     
    
-  }
+  // }
 
-  @media screen and (max-width: 600px) {
-    .box {
+  // @media screen and (max-width: 600px) {
+  //   .box {
         
-        display: flex;
-        flex-direction: column;
+  //       display: flex;
+  //       flex-direction: column;
         
-        // padding: 50px;
-        margin: 0px;
-        width: 81%;
-        gap: 10px;
+  //       // padding: 50px;
+  //       margin: 0px;
+  //       width: 81%;
+  //       gap: 10px;
       
-    }
+  //   }
    
-  }
+  // }
