--- a/src/app/blog/blog/blog.component.html
+++ b/src/app/blog/blog/blog.component.html
@@ -50,7 +50,7 @@
 </div>
 
 <div class="box">
-  <h1 id="event-upcoming">ALL SERMONS</h1>
+  <h1 id="event-upcoming">ALL BLOG POSTS</h1>
 </div>
 
 <div class="px-14 md:px-16 py-20 bg-plpmLightGray">
