--- a/src/app/home/home-hero/home-hero.component.scss
+++ b/src/app/home/home-hero/home-hero.component.scss
@@ -77,3 +77,22 @@ iframe {
   width: 100%;
   height: 100%;
 }
+.styled {
+  display: none;
+}
+.popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+}
+.shadowpopup {
+  box-shadow: 0 0 20px #888;
+}
+.clapp {
+  display: flex;
+  min-height: 100vh;
+  z-index: 2300000000000000000;
+}
+// <iframe width="560" height="315" src="https://www.youtube.com/embed/jP3qAvnmpZk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
