--- a/src/app/home/upcoming-events-previews/upcomingEventsPreview.component.html
+++ b/src/app/home/upcoming-events-previews/upcomingEventsPreview.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col justify-center mb-8 upcomingevents">
   <div class="flex flex-col items-center mb-6 upcoming-headline">
     <label class="py-5 opacity-[0.78]">upcoming Events</label>
-    <h2 class="mb-8">Come and get the word that will set you free</h2>
+    <h2 class="mb-8">{"....Maintaining focus and becoming Christ"}</h2>
   </div>
   <div class="flex flex-col-reverse justify-center show-event lg:flex-row">
     <div class="flex justify-end gap-4 py-10 lg:hidden">
