--- a/src/app/about/about/about.component.html
+++ b/src/app/about/about/about.component.html
@@ -51,17 +51,17 @@
 
     <section class="sixth">
         <div>
-            <h2>FIND FULFILLMENT AND JOY</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, eveniet dicta, alias magni sunt porro explicabo veniam laborum quibusdam eaque odit ut excepturi saepe expedita iusto dolores iure, aut ratione maiores id. Qui expedita pariatur totam, voluptatem ratione dolore provident.</p>
+            <h2 class="uppercase">Spiritual growth (word impact)</h2>
+            <p class="capitalize">the word of the lord is our life mannual, develops our inner man in rightousness and bring about character formation which speaks of our life as example of christ on earth </p>
         </div>
         <img src="./../../../assets/3MWdi5_6Hrc.svg" class="joy">
     </section>
 
     <section class="small">
         <div>
-            <h2>FIND FULFILLMENT AND JOY</h2>
+            <h2 class="uppercase">atmosphere of worship</h2>
             <img src="./../../../assets/3MWdi5_6Hrc.svg" class="joy">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, eveniet dicta, alias magni sunt porro explicabo veniam laborum quibusdam eaque odit ut excepturi saepe expedita iusto dolores iure, aut ratione maiores id. Qui expedita pariatur totam, voluptatem ratione dolore provident.</p>
+            <p class="capitalize">PLPM is a home of true and intense worship that draws men into the divine presence of God where individuals are lost in His Love</p>
         </div>
        
     </section>
@@ -69,8 +69,8 @@
     <section class="sixth">
         <img src="./../../../assets/3Xmcv5MjZpw.svg" class="joy">
         <div>
-            <h2>SHARED VALUES</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, eveniet dicta, alias magni sunt porro explicabo veniam laborum quibusdam eaque odit ut excepturi saepe expedita iusto dolores iure, aut ratione maiores id. Qui expedita pariatur totam, voluptatem ratione dolore provident.</p>
+            <h2>atmosphere of love </h2>
+            <p> Every race, colour, tribe and tongues are one in God's family, living in Love and sharing things in common as God's love commanded. An assembly where everyone matters. As you come you are never alone anymore. </p>
         </div>
         
     </section>
