--- a/src/app/home/home-hero/home-hero.component.html
+++ b/src/app/home/home-hero/home-hero.component.html
@@ -28,7 +28,7 @@
       >
         <div *ngIf="changestate">
           <h1 class="font-medium leading-[16px] text-[20px]">
-            Giviing: Giving to God servant
+            Giviing: Giving to God's servant
           </h1>
           <p class="max-w-[48rem] font-bold leading-[32px] text-[36px] my-12">
             A word from God will librate your world come and get your word from
