--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,13 +1,15 @@
 <body class="bg-white">
-  <nav class="top-0 left-0 w-full shadow">
-    <div class="container m-auto flex justify-between text-plpmWhite md:text-black">
-      <div class="flex flex-row items-center ml-3 md:ml-0">
+  <nav class="top-0 left-0 w-full shadow-lg">
+    <div
+      class="container m-auto flex justify-between text-plpmWhite md:text-black"
+    >
+      <div class="flex flex-row items-center ml-5 md:ml-8">
         <img
-        class=" h-[45px] cursor-pointer"
-        src="/assets/images/perfectlogo.png"
-        alt="Church/png"
-      />
-      <h1 class=" py-4 text-larger font-bold text-black">PLPM</h1>
+          class="h-[45px] cursor-pointer"
+          src="/assets/images/perfectlogo.png"
+          alt="Church/png"
+        />
+        <h1 class="py-4 text-larger font-bold text-black">PLPM</h1>
       </div>
       <ul
         class="hidden md:text-large lg:text-larger font-medium md:flex py-2 lg:py-0 cursor-pointer"
@@ -59,7 +61,7 @@
         </li>
       </ul>
       <button
-        class="hidden md:inline md:bg-plpmNavButton md:h-10 md:w-32 md:mt-2 md:text-large lg:text-larger font-semibold md:rounded-sm"
+        class="hidden md:inline md:bg-plpmNavButton md:h-10 md:w-32 md:mt-2 md:text-large lg:text-larger font-semibold md:rounded-sm md:mr-8"
       >
         CONTACT US
       </button>
@@ -75,7 +77,7 @@
       </button>
       <div
         *ngIf="hidenavbar"
-        class="absolute z-[99] top-0 right-0 w-7/12 h-screen bg-plpmDark flex flex-col items-center transition-all duration-300 "
+        class="absolute z-[99] top-0 right-0 w-7/12 h-screen bg-plpmDark flex flex-col items-center transition-all duration-300"
       >
         <div class="absolute left-6">
           <button
