--- a/src/app/about/about/about.component.html
+++ b/src/app/about/about/about.component.html
@@ -1,125 +1,135 @@
+<section class="first">
+  <div class="content-center">
+    <p class="mt-40"><strong>ABOUT US</strong></p>
+    <h2>SERVING THE WORLD AROUND US</h2>
+  </div>
+</section>
 
+<section class="second">
+  <p>WELCOME TO OUR CHURCH</p>
+  <h2>LOVE AND COMPASSION</h2>
+  <p class="capitalize text-center my-3">
+    A Home base where people are gethered, taught and nourished by the word of
+    God. Your spiritual state and total well being is our concern
+  </p>
+</section>
 
-<body>
+<section class="third">
+  <img src="/assets/images/daddy.png" class="pray" />
+  <img src="/assets/images/perfectlogo.png" class="pray-x" />
+  <img src="/assets/images/mummy.png" class="pray" />
+</section>
 
-    <section class="first" >
-        <div class="content-center">
-            <p class=" mt-40"><strong>ABOUT US</strong> </p>
-            <h2>SERVING THE WORLD AROUND US</h2>
+<section class="fourth">
+  <div>
+    <p>OUR MISSION & VISION</p>
+    <h2>STRIVING FOR A BETTER TOMORROW</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
+      blanditiis officiis exercitationem soluta alias dolorem cupiditate
+      obcaecati. Dolores, debitis possimus soluta provident libero quibusdam
+      magni voluptate repellat fugiat exercitationem minima commodi optio
+      accusantium quas id deserunt officia cum reiciendis, qui iure iste
+      maiores. Fugit laudantium maiores, ut tempore eveniet consequuntur.
+    </p>
+  </div>
+  <div>
+    <p>WHAT WE DO</p>
+    <h2>BRINGING PEACE AND JOY TO THE WORLD</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
+      blanditiis officiis exercitationem soluta alias dolorem cupiditate
+      obcaecati. Dolores, debitis possimus soluta provident libero quibusdam
+      magni voluptate repellat fugiat exercitationem minima commodi optio
+      accusantium quas id deserunt officia cum reiciendis, qui iure iste
+      maiores. Fugit laudantium maiores, ut tempore eveniet consequuntur.
+    </p>
+  </div>
+</section>
 
-        </div>
-       
-    
-    </section>
-    
-    <section class="second">
-        <p>WELCOME TO OUR CHURCH</p>
-        <h2>LOVE AND COMPASSION</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est atque assumenda labore quae eos fugit molestias asperiores maxime vitae laborum architecto rem quod, consequuntur totam nam modi voluptas aut optio! Iusto culpa hic quasi ratione esse expedita illum quibusdam alias molestias eveniet harum voluptatum optio quae ipsum, id, nostrum libero!</p>
-    
-    </section>
+<section class="fifth">
+  <p>BENEFITS</p>
+  <h2>THE BENEFITS OF</h2>
+  <h2>JOINING OUR CHURCH</h2>
+</section>
 
-    <section class="third">
-        <img src="./../../../assets/a-bearded-man-praying-5206040.svg" class="pray">
-        <img src="./../../../assets/man-and-woman-reading-book-while-sitting-on-pews-8468470.svg " class="pray-x">
-        <img src="./../../../assets/people-sitting-on-brown-pews-8674151.svg" class="pray">
+<section class="sixth">
+  <div>
+    <h2 class="uppercase">Spiritual growth (word impact)</h2>
+    <p class="capitalize">
+      the word of the lord is our life mannual, develops our inner man in
+      rightousness and bring about character formation which speaks of our life
+      as example of christ on earth
+    </p>
+  </div>
+  <img src="./../../../assets/3MWdi5_6Hrc.svg" class="joy" />
+</section>
 
-    </section>
+<section class="small">
+  <div>
+    <h2 class="uppercase">Spiritual growth (word impact)</h2>
+    <!-- <h2 class="uppercase">atmosphere of worship</h2> -->
+    <img src="./../../../assets/3MWdi5_6Hrc.svg" class="joy" />
+    <p class="capitalize">
+      the word of the lord is our life mannual, develops our inner man in
+      rightousness and bring about character formation which speaks of our life
+      as example of christ on earth
+    </p>
+    <!-- <p class="capitalize">
+      PLPM is a home of true and intense worship that draws men into the divine
+      presence of God where individuals are lost in His Love
+    </p> -->
+  </div>
+</section>
 
-    <section class="fourth">
-        <div>
-            <p>OUR MISSION & VISION</p>
-            <h2>STRIVING FOR A BETTER TOMORROW</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur blanditiis officiis exercitationem soluta alias dolorem cupiditate obcaecati. Dolores, debitis possimus soluta provident libero quibusdam magni voluptate repellat fugiat exercitationem minima commodi optio accusantium quas id deserunt officia cum reiciendis, qui iure iste maiores. Fugit laudantium maiores, ut tempore eveniet consequuntur.</p>
+<section class="sixth">
+  <img src="./../../../assets/3Xmcv5MjZpw.svg" class="joy" />
+  <div>
+    <h2 class="uppercase">atmosphere of worship</h2>
+    <!-- <h2 class="uppercase">atmosphere of love</h2> -->
+    <p class="capitalize">
+      PLPM is a home of true and intense worship that draws men into the divine
+      presence of God where individuals are lost in His Love
+    </p>
+    <!-- <p class="capitalize">
+      Every race, colour, tribe and tongues are one in God's family, living in
+      Love and sharing things in common as God's love commanded. An assembly
+      where everyone matters. As you come you are never alone anymore.
+    </p> -->
+  </div>
+</section>
+<section class="small">
+  <div>
+    <h2 class="uppercase">atmosphere of worship</h2>
+    <img src="./../../../assets/3Xmcv5MjZpw.svg" class="joy" />
 
-        </div>
-        <div>
-            <p>WHAT WE DO</p>
-            <h2>BRINGING PEACE AND JOY TO THE WORLD</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur blanditiis officiis exercitationem soluta alias dolorem cupiditate obcaecati. Dolores, debitis possimus soluta provident libero quibusdam magni voluptate repellat fugiat exercitationem minima commodi optio accusantium quas id deserunt officia cum reiciendis, qui iure iste maiores. Fugit laudantium maiores, ut tempore eveniet consequuntur.</p>
+    <p class="capitalize">
+      PLPM is a home of true and intense worship that draws men into the divine
+      presence of God where individuals are lost in His Love
+    </p>
+  </div>
+</section>
+<section class="sixth">
+  <div>
+    <h2 class="uppercase">atmosphere of love</h2>
+    <p class="capitalize">
+      Every race, colour, tribe and tongues are one in God's family, living in
+      Love and sharing things in common as God's love commanded. An assembly
+      where everyone matters. As you come you are never alone anymore.
+    </p>
+  </div>
+  <img src="./../../../assets/3MWdi5_6Hrc.svg" class="joy" />
+</section>
 
-        </div>
-      
-       
-    </section>
-
-    <section class="fifth">
-        <p>BENEFITS</p>
-        <h2>THE BENEFITS OF </h2>
-        <h2>JOINING OUR CHURCH</h2>
-    </section>
-
-    <section class="sixth">
-        <div>
-            <h2 class="uppercase">Spiritual growth (word impact)</h2>
-            <p class="capitalize">the word of the lord is our life mannual, develops our inner man in rightousness and bring about character formation which speaks of our life as example of christ on earth </p>
-        </div>
-        <img src="./../../../assets/3MWdi5_6Hrc.svg" class="joy">
-    </section>
-
-    <section class="small">
-        <div>
-            <h2 class="uppercase">atmosphere of worship</h2>
-            <img src="./../../../assets/3MWdi5_6Hrc.svg" class="joy">
-            <p class="capitalize">PLPM is a home of true and intense worship that draws men into the divine presence of God where individuals are lost in His Love</p>
-        </div>
-       
-    </section>
-
-    <section class="sixth">
-        <img src="./../../../assets/3Xmcv5MjZpw.svg" class="joy">
-        <div>
-            <h2>atmosphere of love </h2>
-            <p> Every race, colour, tribe and tongues are one in God's family, living in Love and sharing things in common as God's love commanded. An assembly where everyone matters. As you come you are never alone anymore. </p>
-        </div>
-        
-    </section>
-    <section class="small">
-        
-        <div>
-            <h2>SHARED VALUES</h2>
-            <img src="./../../../assets/3Xmcv5MjZpw.svg" class="joy">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, eveniet dicta, alias magni sunt porro explicabo veniam laborum quibusdam eaque odit ut excepturi saepe expedita iusto dolores iure, aut ratione maiores id. Qui expedita pariatur totam, voluptatem ratione dolore provident.</p>
-        </div>
-        
-    </section>
-    <section class="sixth">
-        <div>
-            <h2>CHARITY EVENTS</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, eveniet dicta, alias magni sunt porro explicabo veniam laborum quibusdam eaque odit ut excepturi saepe expedita iusto dolores iure, aut ratione maiores id. Qui expedita pariatur totam, voluptatem ratione dolore provident.</p>
-        </div>
-        <img src="./../../../assets/3MWdi5_6Hrc.svg" class="joy">
-    </section>
-
-    <section class="small">
-        <div>
-            <h2>CHARITY EVENTS</h2>
-            <img src="./../../../assets/3MWdi5_6Hrc.svg" class="joy">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, eveniet dicta, alias magni sunt porro explicabo veniam laborum quibusdam eaque odit ut excepturi saepe expedita iusto dolores iure, aut ratione maiores id. Qui expedita pariatur totam, voluptatem ratione dolore provident.</p>
-        </div>
-        
-    </section>
-
-    <section class="sixth">
-        <img src="./../../../assets/3Xmcv5MjZpw.svg" class="joy">
-        <div>
-            <h2>ALL ARE WELCOME</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, eveniet dicta, alias magni sunt porro explicabo veniam laborum quibusdam eaque odit ut excepturi saepe expedita iusto dolores iure, aut ratione maiores id. Qui expedita pariatur totam, voluptatem ratione dolore provident.</p>
-        </div>
-        
-    </section>
-    <section class="small">
-       
-        <div>
-            <h2>ALL ARE WELCOME</h2>
-            <img src="./../../../assets/3Xmcv5MjZpw.svg" class="joy">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, eveniet dicta, alias magni sunt porro explicabo veniam laborum quibusdam eaque odit ut excepturi saepe expedita iusto dolores iure, aut ratione maiores id. Qui expedita pariatur totam, voluptatem ratione dolore provident.</p>
-        </div>
-        
-    </section>
-
-    
-
-</body>
-
-
+<section class="small">
+  <div>
+    <h2 class="uppercase">atmosphere of love</h2>
+    <img src="./../../../assets/3MWdi5_6Hrc.svg" class="joy" />
+    <p class="capitalize">
+      Every race, colour, tribe and tongues are one in God's family, living in
+      Love and sharing things in common as God's love commanded. An assembly
+      where everyone matters. As you come you are never alone anymore.
+    </p>
+  </div>
+</section>
+<div class="mb-12"></div>
