--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,9 +1,9 @@
 <body class="bg-white">
-  <nav class="top-0 left-0 w-full shadow-lg">
+  <nav class="w-full shadow-lg">
     <div
       class="container m-auto flex justify-between text-plpmWhite md:text-black"
     >
-      <div class="flex flex-row items-center ml-5 md:ml-8">
+      <div class="flex flex-row items-center ml-5 md:ml-3 lg:ml-8">
         <img
           class="h-[45px] cursor-pointer"
           src="/assets/images/perfectlogo.png"
@@ -12,11 +12,11 @@
         <h1 class="py-4 text-larger font-bold text-black">PLPM</h1>
       </div>
       <ul
-        class="hidden md:text-large lg:text-larger font-medium md:flex py-2 lg:py-0 cursor-pointer"
+        class="hidden md:text-large lg:text-larger font-medium md:flex py-2 lg:py-0 cursor-pointer items-center"
       >
         <li class="flex items-center">
           <a
-            class="hover:bg-gray-200 py-4 px-6"
+            class="hover:bg-gray-200 py-4 md:px-2 lg:px-4"
             [routerLink]="[Routes.home]"
             routerLinkActive="active"
             ariaCurrentWhenActive="page"
@@ -25,7 +25,7 @@
         </li>
         <li class="flex items-center">
           <a
-            class="hover:bg-gray-200 py-4 px-6"
+            class="hover:bg-gray-200 py-4 md:px-2 lg:px-4"
             [routerLink]="[Routes.about]"
             routerLinkActive="active"
             ariaCurrentWhenActive="page"
@@ -34,7 +34,7 @@
         </li>
         <li class="flex items-center">
           <a
-            class="hover:bg-gray-200 py-4 px-6"
+            class="hover:bg-gray-200 py-4 md:px-2 lg:px-4"
             [routerLink]="[Routes.sermon]"
             routerLinkActive="active"
             ariaCurrentWhenActive="page"
@@ -43,7 +43,7 @@
         </li>
         <li class="flex items-center">
           <a
-            class="hover:bg-gray-200 py-4 px-6"
+            class="hover:bg-gray-200 py-4 md:px-2 lg:px-4"
             [routerLink]="[Routes.blog]"
             routerLinkActive="active"
             ariaCurrentWhenActive="page"
@@ -52,11 +52,29 @@
         </li>
         <li class="flex items-center">
           <a
-            class="hover:bg-gray-200 py-4 px-6"
+            class="hover:bg-gray-200 py-4 md:px-2 lg:px-4"
             [routerLink]="[Routes.event]"
             routerLinkActive="active"
             ariaCurrentWhenActive="page"
             >EVENT</a
+          >
+        </li>
+        <li class="flex items-center">
+          <a
+            class="hover:bg-gray-200 py-4 md:px-2 lg:px-4"
+            [routerLink]="[Routes.event]"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            >GALLERY</a
+          >
+        </li>
+        <li class="flex items-center">
+          <a
+            class="hover:bg-gray-200 py-4 md:px-2 lg:px-4"
+            [routerLink]="[Routes.event]"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            >BIOGRAPY</a
           >
         </li>
       </ul>
@@ -135,76 +153,27 @@
               >EVENT</a
             >
           </li>
-        </ul>
-        <button
-          class="bg-plpmNavButton h-10 w-28 mt-2 text-base font-semibold text-large rounded-xl"
-        >
-          CONTACT US
-        </button>
-      </div>
-      <div
-        *ngIf="hidenavbar"
-        class="absolute z-[99] top-0 right-0 w-7/12 h-screen bg-plpmDark border flex flex-col items-center transition-all duration-300"
-      >
-        <div class="absolute left-6">
-          <button
-            class="text-3xl border-0 background-none font-bold"
-            (click)="togglenavbarmobile()"
-          >
-            &times;
-          </button>
-        </div>
-        <ul
-          class="flex flex-col items-center w-full text-base cursor-pointer pt-8"
-        >
-          <li class="flex items-center">
-            <a
-              class="hover:bg-gray-200 py-4 px-6"
-              [routerLink]="[Routes.home]"
-              routerLinkActive="active"
-              ariaCurrentWhenActive="page"
-              >HOME</a
-            >
-          </li>
-          <li class="flex items-center">
-            <a
-              class="hover:bg-gray-200 py-4 px-6"
-              [routerLink]="[Routes.about]"
-              routerLinkActive="active"
-              ariaCurrentWhenActive="page"
-              >ABOUT US</a
-            >
-          </li>
-          <li class="flex items-center">
-            <a
-              class="hover:bg-gray-200 py-4 px-6"
-              [routerLink]="[Routes.sermon]"
-              routerLinkActive="active"
-              ariaCurrentWhenActive="page"
-              >SERMON</a
-            >
-          </li>
-          <li class="flex items-center">
-            <a
-              class="hover:bg-gray-200 py-4 px-6"
-              [routerLink]="[Routes.blog]"
-              routerLinkActive="active"
-              ariaCurrentWhenActive="page"
-              >BLOG</a
-            >
-          </li>
           <li class="flex items-center">
             <a
               class="hover:bg-gray-200 py-4 px-6"
               [routerLink]="[Routes.event]"
               routerLinkActive="active"
               ariaCurrentWhenActive="page"
-              >EVENT</a
+              >GALLERY</a
+            >
+          </li>
+          <li class="flex items-center">
+            <a
+              class="hover:bg-gray-200 py-4 px-4"
+              [routerLink]="[Routes.event]"
+              routerLinkActive="active"
+              ariaCurrentWhenActive="page"
+              >BIOGRAPY</a
             >
           </li>
         </ul>
         <button
-          class="bg-plpmNavButton h-10 w-32 mt-2 text-base font-semibold text-large rounded-sm"
+          class="bg-plpmNavButton h-10 w-28 mt-2 text-base font-semibold text-large rounded-xl"
         >
           CONTACT US
         </button>
