all changes and edited made sucessfully

--- a/src/app/about/about/about.component.html
+++ b/src/app/about/about/about.component.html
@@ -22,27 +22,21 @@
 
 <section class="fourth">
   <div>
-    <p>OUR MISSION & VISION</p>
-    <h2>STRIVING FOR A BETTER TOMORROW</h2>
+    <h2>OUR MISSION</h2>
     <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
-      blanditiis officiis exercitationem soluta alias dolorem cupiditate
-      obcaecati. Dolores, debitis possimus soluta provident libero quibusdam
-      magni voluptate repellat fugiat exercitationem minima commodi optio
-      accusantium quas id deserunt officia cum reiciendis, qui iure iste
-      maiores. Fugit laudantium maiores, ut tempore eveniet consequuntur.
+      No man can be made perfect except by the right application of the word of
+      God in His life and day to day walk with jesus Christ, without which no
+      man shall reign with the Lord of all (we are made perfect by our day to
+      day walk with God as we walk day by day with the Lord).'
     </p>
   </div>
   <div>
-    <p>WHAT WE DO</p>
-    <h2>BRINGING PEACE AND JOY TO THE WORLD</h2>
+    <h2>VISION</h2>
     <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
-      blanditiis officiis exercitationem soluta alias dolorem cupiditate
-      obcaecati. Dolores, debitis possimus soluta provident libero quibusdam
-      magni voluptate repellat fugiat exercitationem minima commodi optio
-      accusantium quas id deserunt officia cum reiciendis, qui iure iste
-      maiores. Fugit laudantium maiores, ut tempore eveniet consequuntur.
+      No man can be made perfect except by the right application of the word of
+      God in His life and day to day walk with jesus Christ, without which no
+      man shall reign with the Lord of all (we are made perfect by our day to
+      day walk with God as we walk day by day with the Lord).'
     </p>
   </div>
 </section>
