--- a/src/app/biography/biography.component.html
+++ b/src/app/biography/biography.component.html
@@ -15,26 +15,43 @@
       >
         <img src="./assets/images/daddy.png" alt="overseer" />
         <h1 class="mb-3 hero-text text-[#FF4655] text-center">
-          REV GABRIEL ESROM
+          Revd Gabriel.A.Esrom
         </h1>
       </div>
       <div class="pt-10 flex flex-col lg:w-[54%]">
         <p class="text-white opacity-[0.7]">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quo sit
-          error rem, mollitia doloremque voluptates, soluta cum animi ipsa natus
-          harum asperiores ex corporis nemo magnam architecto amet odio!
-          consectetur adipisicing elit. Rerum quo sit error rem, mollitia
-          doloremque voluptates, soluta cum animi ipsa natus harum asperiores ex
-          corporis nemo magnam architecto amet odio! consectetur adipisicing
-          elit. Rerum quo sit error rem, mollitia doloremque voluptates, soluta
-          cum animi ipsa natus harum asperiores ex corporis nemo magnam
-          architecto amet odio!
+          Revd Gabriel.A.Esrom is the president and founder of Perfect Liberty
+          Power Ministry(PLPM).
+        </p>
+        <p class="text-white opacity-[0.7]">
+          A teacher and preacher of Gods word with prophetic grace.
+        </p>
+        <p class="text-white opacity-[0.7]">
+          Revd G.A.Esrom is a trained and a professional(chatered) teacher in
+          Nigeria.
+        </p>
+        <p class="text-white opacity-[0.7]">
+          He studied Fine and Applied Art in obafemi Awolowo university(Adeyemi
+          college of Education ondo).
+        </p>
+        <p class="text-white opacity-[0.7]">
+          He is a host of a popular couples meeting called "THE MARRIED".
+        </p>
+        <p class="text-white opacity-[0.7]">
+          His passion for youth getting it right in life and in marriage gave
+          birth to a monthly interdenominational meeting called "SINGLES AFFIAR"
+          which is of a great blessing to many.
+        </p>
+        <p class="text-white opacity-[0.7]">
+          Revd Esrom is a blessed gospel Minister of God. He is happly married
+          to the love of his life Rev Mrs Aderonke.O.Esrom. Their marriage is
+          blessed with three wonderful children.
         </p>
         <div class="flex lg:justify-start justify-center items-center">
           <div class="flex flex-col mt-4">
             <div class="flex gap-3 items-center mb-[5px]">
               <i class="fa fa-phone text-[#ffd2a4]" aria-hidden="true"></i>
-              <h3 class="">Hot Line</h3>
+              <h3 class="text-plpmWhite">Hot Line</h3>
             </div>
             <div class="flex flex-col gap-1">
               <span class="text-[#ffffff]">+23434860967</span>
@@ -116,26 +133,35 @@
       >
         <img src="./assets/images/mummy.png" alt="overseer" />
         <h1 class="mb-3 hero-text text-[#FF4655] text-center">
-          REV GABRIEL ESROM
+          Rev Mrs Aderonke O.Esrom
         </h1>
       </div>
       <div class="pt-10 flex flex-col lg:w-[54%]">
         <p class="text-white opacity-[0.7]">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quo sit
-          error rem, mollitia doloremque voluptates, soluta cum animi ipsa natus
-          harum asperiores ex corporis nemo magnam architecto amet odio!
-          consectetur adipisicing elit. Rerum quo sit error rem, mollitia
-          doloremque voluptates, soluta cum animi ipsa natus harum asperiores ex
-          corporis nemo magnam architecto amet odio! consectetur adipisicing
-          elit. Rerum quo sit error rem, mollitia doloremque voluptates, soluta
-          cum animi ipsa natus harum asperiores ex corporis nemo magnam
-          architecto amet odio!
+          Rev Mrs Aderonke O.Esrom is the Secretary and co-founder of Perfect
+          Liberty Power Ministry(PLPM). She is the dynamic teacher of God's word
+          and a dedicated intercessor.
+        </p>
+        <p class="text-white opacity-[0.7]">
+          Rev Mrs Aderonke O.Esrom is a charted accountant (FCA), a seasoned
+          administrator both in the ministry and in the ciruclar(civil service).
+        </p>
+        <p class="text-white opacity-[0.7]">
+          She is a co-preacher and a worthy Joshua to moses of our time.
+        </p>
+        <p class="text-white opacity-[0.7]">
+          Mrs Aderonke O.Esrom is a God addict and a generous givers,Her passion
+          for the needy is undescriable.
+        </p>
+        <p class="text-white opacity-[0.7]">
+          She is a blessed mother of glorious three children who are doing
+          exploit and great in their choice of carriers.
         </p>
         <div class="flex lg:justify-start justify-center items-center">
           <div class="flex flex-col mt-4">
             <div class="flex gap-3 items-center mb-[5px]">
               <i class="fa fa-phone text-[#ffd2a4]" aria-hidden="true"></i>
-              <h3 class="">Hot Line</h3>
+              <h3 class="text-plpmWhite">Hot Line</h3>
             </div>
             <div class="flex flex-col gap-1">
               <span class="text-[#ffffff]">+23434860967</span>
