--- a/src/app/home/love-compassion/love-compassion.component.html
+++ b/src/app/home/love-compassion/love-compassion.component.html
@@ -1,42 +1,43 @@
 <section id="love-compassion">
   <div class="love-compassion-text1">
-    <h2>love and compassion</h2>
+    <h2>Perfect liberty power Ministry</h2>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur.
+      But “whoso looketh into the perfect law of liberty, and continueth
+      therein, he being not a forgetful hearer, but a doer of the work, this man
+      shall be blessed in his deed. (James 1 vs 25 )
     </p>
   </div>
 
   <div class="images">
-    <img class="h-[280px] w-[220px] rounded-[32px]" src="/assets/images/daddy.png" alt="daddy/png" />
-    <div class="button-img ">
-      <button class="primary-btn read-morelargedevicce md:mb-[40px]">Read more</button>
-      <!-- <img
-        src="/assets/images/love-compassion-2.png"
-        alt="love-compassion/png"
-      /> -->
-      
+    <img
+      class="h-[280px] w-[220px] rounded-[32px]"
+      src="/assets/images/daddy.png"
+      alt="daddy/png"
+    />
+    <div class="button-img">
+      <button class="primary-btn read-morelargedevicce md:mb-[40px]">
+        Read more
+      </button>
+
       <img
         class="speciall h-[320px] w-[220px] rounded-[32px]"
         src="/assets/images/perfectlogo.png"
         alt="Church/png"
       />
     </div>
-    <img class="h-[280px] w-[220px] rounded-[32px]" src="/assets/images/daddy.png" alt="mummy/png" />
+    <img
+      class="h-[280px] w-[220px] rounded-[32px]"
+      src="/assets/images/daddy.png"
+      alt="mummy/png"
+    />
   </div>
   <div class="buttondiv-smalldivce">
-  <button class="primary-btn read-more">Read more</button>
-</div>
+    <button class="primary-btn read-more">Read more</button>
+  </div>
   <div class="love-compassion-text2">
-    <p>OUR MISSION AND VISION</p>
-    <h4>CELEBRATE WITH US</h4>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua.
-    </p>
+    <p>A WORD FROM GOD WILL LIBERATE YOUR WORLD</p>
+    <h4>celebrate WITH US @ PLPM</h4>
+
     <a href="#"
       >Read more
       <img src="/assets/images/arrow-right.png" alt="arrow/png" />
