--- a/src/app/home/our-sermons-preview/sermonsPreview.component.scss
+++ b/src/app/home/our-sermons-preview/sermonsPreview.component.scss
@@ -55,18 +55,18 @@
     }
 
     .firt-hero-preview {
-      background-image: url("/assets/images/preview-hero-image-1.png");
+      background-image: url("/assets/images/daddy_1.png");
     }
 
     .second-hero-preview {
-      background-image: url("/assets/images/preview-hero-image-2.png");
+      background-image: url("/assets/images/daddy_2.png");
     }
 
     .third-hero-preview {
-      background-image: url("/assets/images/preview-hero-image-3.png");
+      background-image: url("/assets/images/daddy_3.png");
     }
     .fourth-hero-preview {
-      background-image: url("/assets/images/preview-hero-image-4.png");
+      background-image: url("/assets/images/daddy_4.png");
     }
   }
 }
@@ -80,7 +80,7 @@
       .second-hero-preview,
       .third-hero-preview,
       .fourth-hero-preview {
-        margin-bottom:30px;
+        margin-bottom: 30px;
       }
     }
   }
