--- a/src/app/home/upcoming-events-previews/upcomingEventsPreview.component.html
+++ b/src/app/home/upcoming-events-previews/upcomingEventsPreview.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col justify-center mb-8 upcomingevents">
   <div class="flex flex-col items-center mb-6 upcoming-headline">
     <label class="py-5 opacity-[0.78]">upcoming Events</label>
-    <h2 class="mb-8">....Maintaining focus and becoming Christ</h2>
+    <h2 class="mb-8">....THE MARRIED</h2>
   </div>
   <div class="flex flex-col-reverse justify-center show-event lg:flex-row">
     <div class="flex justify-end gap-4 py-10 lg:hidden">
@@ -18,24 +18,24 @@
       <div
         class="absolute right-[40px] top-4 flex items-center flex-col uppercase known-when"
       >
-        <h5>16</h5>
-        <label class="opacity-[0.78]">junly</label>
+        <h5>14</h5>
+        <label class="opacity-[0.78]">January</label>
       </div>
       <div class="flex flex-col gap-5 pl-10 pr-20 mt-10 mx-14 known-details">
         <h3 class="mt-2">upcoming event</h3>
-        <h5>singles affiars junly 2022 edition</h5>
-        <p class="opacity-[0.78]">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor.
-        </p>
-       
+        <h5>THE MARRIED January 2023 edition</h5>
+        <p class="opacity-[0.78]">THEME:fight for your home</p>
+
         <div class="div-li">
           <img src="/assets/event/Clock icon.svg " alt="clock/svg" />
-          <p class="max-w-[140px]">Friday 23:39 IST Saturday 11:20 ISD</p>
+          <p class="max-w-[140px]">Saturday 9:00 AM live</p>
         </div>
         <div class="div-li">
           <img src="/assets/event/circle.svg " alt="circle/svg" />
-          <p class="max-w-[140px]">No 233 Main St. New York,United State</p>
+          <p class="max-w-[140px]">
+            Former Coppers lodge,Catholic Junction Area along Adeyemi college of
+            Education ondo state Nigeria
+          </p>
         </div>
         <button
           class="bg-[#161722] rounded-xl w-[160px] mt-5 py-4"
@@ -47,7 +47,11 @@
     </div>
     <div class="flex flex-col">
       <div class="show-event-img lg:w-[710px] md:h-[520px] h-[250px]">
-        <img class="w-full h-full" src="/assets/images/mummy&daddy.png " alt="clock/svg" />
+        <img
+          class="w-full h-full"
+          src="/assets/images/dmarried_1.png "
+          alt="clock/svg"
+        />
       </div>
       <div class="justify-end hidden gap-4 py-10 lg:flex">
         <label>View all Events</label>
