--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -62,7 +62,7 @@
         <li class="flex items-center">
           <a
             class="hover:bg-gray-200 py-4 md:px-2 lg:px-4"
-            [routerLink]="[Routes.event]"
+            [routerLink]="[Routes.gallery]"
             routerLinkActive="active"
             ariaCurrentWhenActive="page"
             >GALLERY</a
@@ -71,7 +71,7 @@
         <li class="flex items-center">
           <a
             class="hover:bg-gray-200 py-4 md:px-2 lg:px-4"
-            [routerLink]="[Routes.event]"
+            [routerLink]="[Routes.biography]"
             routerLinkActive="active"
             ariaCurrentWhenActive="page"
             >BIOGRAPY</a
@@ -156,7 +156,7 @@
           <li class="flex items-center">
             <a
               class="hover:bg-gray-200 py-4 px-6"
-              [routerLink]="[Routes.event]"
+              [routerLink]="[Routes.gallery]"
               routerLinkActive="active"
               ariaCurrentWhenActive="page"
               >GALLERY</a
@@ -165,7 +165,7 @@
           <li class="flex items-center">
             <a
               class="hover:bg-gray-200 py-4 px-4"
-              [routerLink]="[Routes.event]"
+              [routerLink]="[Routes.biography]"
               routerLinkActive="active"
               ariaCurrentWhenActive="page"
               >BIOGRAPY</a
